change color red for #ED1C24

--- a/css/clientes.scss
+++ b/css/clientes.scss
@@ -65,7 +65,7 @@ hr {
 }
 
 .navbar .navbar-nav .nav-link {
-    color: #df2121;
+    color: #ED1C24;
 }
 
 .navbar .navbar-nav .nav-link a:active{
@@ -77,7 +77,7 @@ hr {
 }
 
 .navbar-toggler-icon {
-    color: #df2121;
+    color: #ED1C24;
 }
 
 /*HEADER*/
@@ -94,7 +94,7 @@ hr {
 
 
 #header h1 {
-    color: red;
+    color: #ED1C24;
     font-size: 32px;  
 }
 
@@ -134,7 +134,7 @@ hr {
 }
 
 #footer a {
-    color: red;
+    color: #ED1C24;
     font-size: 12px;
 }
 
