--- a/css/styles.scss
+++ b/css/styles.scss
@@ -108,7 +108,7 @@ hr {
 }
 
 .navbar .navbar-nav .nav-link {
-    color: #df2121;
+    color: #ED1C24;
 }
 
 .navbar .navbar-nav .nav-link a:active{
@@ -120,7 +120,7 @@ hr {
 }
 
 .navbar-toggler-icon {
-    color: #df2121;
+    color: #ED1C24;
 }
 
 /*HEADER*/
@@ -160,7 +160,7 @@ hr {
 }
 
 #header #cotizar{
-    background-color: red;
+    background-color: #ED1C24;
     opacity: 1;
 }
 
@@ -170,12 +170,12 @@ hr {
 }
 
 #header .header-right div .comeback{
-    color: rgb(248, 8, 8);
+    color: #ED1C24;
     text-align: right;
 }
 
 #header a {
-    color: red;
+    color: #ED1C24;
     font-size: 12px;
 }
 
@@ -216,7 +216,7 @@ hr {
 }
 
 #trust span {
-    color:red;
+    color:#ED1C24;
     font-size: 28px;
 }
 
@@ -256,7 +256,7 @@ hr {
 }
 
 #products .products-titles {
-    color:red;
+    color:#ED1C24;
     font-size: 20px;
     align-items: flex-start!important;
 }
@@ -281,7 +281,7 @@ hr {
 }
 
 #findus span {
-    color:red;
+    color:#ED1C24;
     font-size: 28px;
     
 }
@@ -333,7 +333,7 @@ hr {
 }
 
 #findus .titulo{
-    color:red;
+    color:#ED1C24;
 }
 
 #findus .findus-space{
@@ -375,7 +375,7 @@ hr {
 }
 
 #testimony span {
-    color:red;
+    color:#ED1C24;
     font-size: 28px;
 }
 
@@ -390,7 +390,7 @@ hr {
     height: 20px;
     width: 20px;
     border-radius: 15px;
-    background-color: red;
+    background-color: #ED1C24;
   }
 
 #testimony .clash-card {
@@ -404,7 +404,7 @@ hr {
 }
 
 #testimony .clash-card__image {
-    background-color: red;
+    background-color: #ED1C24;
     position: relative;
     height: 100px;
     border-top-left-radius: $border-radius-size;
@@ -551,7 +551,7 @@ hr {
 }
 
 #footer a {
-    color: red;
+    color: #ED1C24;
     font-size: 12px;
 }
 
