--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,6 +74,12 @@ hr {
     }
 }
 
+@media (min-width: 1848px){
+    #news .news-principal-description{
+        margin-top: -70px!important;
+    }
+}
+
 
 
 /*SOCIAL MEDIA BAR*/
