--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,6 +32,7 @@ hr {
         padding-top: 12%!important;
         height: 80%!important;
     }
+    
 }
 
 @media (min-width: 768px) {
@@ -39,6 +40,17 @@ hr {
         height: 200px!important;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .news-principal-description { 
+    display:none;
+    }
+    }
+    @media screen and (max-width: 600px) {
+       .img-background { 
+        display:none;
+        }
+        }
 
 @media (max-width: 768px) {
     #findus .imagen-mapa{
@@ -133,7 +145,7 @@ hr {
 /*HEADER*/
 
 #header {
-    background: url(../img/principal.jpg) center center no-repeat;
+    background-image: url(../img/principal.jpg);
     background-size: cover;
     height: 100%;
     color: white;
@@ -142,6 +154,8 @@ hr {
     padding-top: 25%;
     padding-left: 50px;
     padding-right: 50px;
+    max-width: 100%;
+ 
 }
 
 
@@ -162,8 +176,10 @@ hr {
     box-shadow: -1px 15px 30px -12px black;
     opacity: 0.85;
     width: 100%;
-    min-width: 360px;
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 600px;
+    min-height: 300px;
+    max-height: 600px;
 }
 
 #header #cotizar{
@@ -229,8 +245,8 @@ hr {
 
 #trust .trust-space{
     padding-top: 4%;
-    padding-right: 15%;
-    padding-left: 15%;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 #trust .trust-titles{
@@ -285,6 +301,7 @@ hr {
 
 #findus .findus-space{
     padding-top: 4%;
+    padding-bottom: 2%;
 }
 
 #findus span {
@@ -392,6 +409,10 @@ hr {
     text-align: center;
 }
 
+#testimony .carousel-indicators {
+    padding-top: 5px;
+  }
+
 #testimony .carousel-indicators li {
     padding-top: 5px;;
     height: 20px;
@@ -408,6 +429,7 @@ hr {
     box-shadow: -1px 15px 30px -12px black;
     margin-bottom: 35px;
     margin-left: 30px;
+    width: 250px;
 }
 
 #testimony .clash-card__image {
@@ -581,6 +603,12 @@ hr {
     padding: 30px;
     border-radius: 10px;
     box-shadow: -1px 15px 30px -12px black;
+    padding: 30px;
+    width: 100%;
+    min-width: 300px;
+    max-width: 600px;
+    min-height: 300px;
+    max-height: 600px;
 }
 
 #footer a {
@@ -609,9 +637,9 @@ hr {
 }
 
 #footer #logo {
-    height: 75px;
-    width: 180px;
-    padding-bottom: 20px;;
+    height: 120px;
+    width: 250px;
+    padding-bottom: 20px;
 }
 
 #footer  #copyright {
