Imágenes Escaladas de la Principal usada en Header
Varios

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -86,7 +86,30 @@ hr {
     }
 }
 
+@media only screen and (max-width: 400px) {
+    #header {
+        background-image: url(../img/principal_400.jpeg) !important;
+        background-size: cover;
+        background-position: left center;
+    }
+  }
+  
+  @media only screen and (max-width: 640px) {
+    #header {
+        background-image: url(../img/principal_600.jpeg) !important;
+        background-size: cover;
+        background-position: left center;
+    }
+  }
 
+  @media only screen and (max-width: 768px) {
+    #header {
+        background-image: url(../img/principal_768.jpeg) !important;
+        background-size: cover;
+        background-position: left center;
+       
+    }
+  }
 
 /*SOCIAL MEDIA BAR*/
 
@@ -157,7 +180,6 @@ hr {
     max-width: 100%;
  
 }
-
 
 #header h1 {
     color: rgb(145, 145, 145);
@@ -605,6 +627,16 @@ hr {
     width: 100%;
     min-width: 360px;
     max-width: 500px;
+}
+
+#footer .header-right div .question{
+    color: rgb(41, 38, 38);
+    text-align: right;
+}
+
+#footer .header-right div .comeback{
+    color: #ED1C24;
+    text-align: right;
 }
 
 #footer a {
