Ajustes en Títulos de Secciones

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -256,7 +256,7 @@ hr {
 
 #statistics h1 {
     color: rgb(145, 145, 145);
-    font-size: 46px;
+    font-size: 56px;
     font-weight: bold;  
 }
 
@@ -282,7 +282,8 @@ hr {
 
 #trust span {
     color:#ED1C24;
-    font-size: 28px;
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
 }
 
 #trust .trust-space{
@@ -312,7 +313,8 @@ hr {
 
 #products span {
     color:rgb(116, 116, 116);
-    font-size: 28px;
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
 }
 
 #products li {
@@ -348,7 +350,8 @@ hr {
 
 #findus span {
     color:#ED1C24;
-    font-size: 28px;
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
     
 }
 
@@ -407,6 +410,13 @@ hr {
     padding-top: 4%;
 }
 
+#findus .findus-aliados span {
+    color:rgb(116, 116, 116);
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
+    
+}
+
 #findus-sidebar img{
 	left: 0;
     top: 30%;
@@ -442,7 +452,9 @@ hr {
 
 #testimony span {
     color:#ED1C24;
-    font-size: 28px;
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
+    
 }
 
 #testimony .slide-container {
@@ -574,7 +586,8 @@ hr {
 
 #news span {
     color:rgb(116, 116, 116);
-    font-size: 28px;
+    font-family: 'Myriad Pro Bold', sans-serif;
+    font-size: 34px;
 }
 
 #news label {
